tests/errors/math_domain_pow.ki
discard import("math").pow(-2, 0.5)
